tests/paczka1/fuzzy1/14714842.err
Error in line 1: 0ssIUTyOAg S391 45,1
Error in line 3: A899 A899 90,9
Error in line 15: 53G5a A899 5,5
Error in line 12: SD6g30kD S391 27,7
Error in line 22: yQEd7L7 A282 83,6
